sample-spring/demo-prod/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-spring
    app.kubernetes.io/name: sample-spring
  name: sample-spring-preview
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample-spring
    version: v0.4.46
  type: ClusterIP
